manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-celery
  labels:
    name: flask-celery
spec: {}
