manifests/07-flower-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower
  namespace: flask-celery
  labels:
    app: flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
      - name: flower
        image: arturosoucase/flask-celery-example-flower
        ports:
        - containerPort: 5555
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
