manifests/03-rabbitmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: flask-celery
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  ports:
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: amqp
  - port: 15672
    targetPort: 15672
    protocol: TCP
    name: management
  selector:
    app: rabbitmq
