manifests/04-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: flask-celery
  labels:
    app: flask-app
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: flask-app
