manifests/07-flower-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flower
  namespace: flask-celery
  labels:
    app: flower
spec:
  type: ClusterIP
  ports:
  - port: 5555
    targetPort: 5555
    protocol: TCP
    name: http
  selector:
    app: flower
