manifests/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-celery-ingress
  namespace: flask-celery
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: flask
            port:
              number: 5000
      - path: /flower
        pathType: Prefix
        backend:
          service:
            name: flower
            port:
              number: 5555
  - host: flask-celery.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask
            port:
              number: 5000
